Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1036,7 +1036,8 @@
    "outputs": [],
    "source": [
     "def build_trace(data, mode = 'markers', name = 'data'):\n",
-    "    trace = []\n",
+    "    x_values = []\n",
+    "    y_values \n",
     "        \n"
    ]
   },
