Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1037,7 +1037,7 @@
    "source": [
     "def build_trace(data, mode = 'markers', name = 'data'):\n",
     "    x_values = []\n",
-    "    y_values \n",
+    "    y_values = []\n",
     "        \n"
    ]
   },
