Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1038,8 +1038,7 @@
     "def build_trace(data, mode = 'markers', name = 'data'):\n",
     "    x_values = []\n",
     "    y_values = []\n",
-    "    for point in data\n",
-    "        x_\n"
+    "    for point in data\n"
    ]
   },
   {
