--- a/index.ipynb
+++ b/index.ipynb
@@ -1039,7 +1039,7 @@
     "    x_values = []\n",
     "    y_values = []\n",
     "    for point in data\n",
-    "        x_\n"
+    "        x_values.append()\n"
    ]
   },
   {
