Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1039,7 +1039,8 @@
     "    x_values = []\n",
     "    y_values = []\n",
     "    for point in data\n",
-    "        x_values.append(point['x'])\n"
+    "        x_values.append(point['x'])\n",
+    "        y_values.append(point[''])\n"
    ]
   },
   {
