Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1040,7 +1040,8 @@
     "    y_values = []\n",
     "    for point in data\n",
     "        x_values.append(point['x'])\n",
-    "        y_values.append(point[''])\n"
+    "        y_values.append(point['y'])\n",
+    "    \n"
    ]
   },
   {
