--- a/index.ipynb
+++ b/index.ipynb
@@ -1042,7 +1042,7 @@
     "        x_values.append(point['x'])\n",
     "        y_values.append(point['y'])\n",
     "    \n",
-    "    return dict('x'= x_values, 'y')\n"
+    "    return dict('x'= x_values, 'y'= y_values, 'mode')\n"
    ]
   },
   {
