--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1041,7 +1041,8 @@
     "    for point in data\n",
     "        x_values.append(point['x'])\n",
     "        y_values.append(point['y'])\n",
-    "    return dict('x'= x_values, 'y'= y_values, 'mode' = mode, 'name'=name)\n"
+    "    \n",
+    "    return dict('x'= x_values, 'y'= y_values, 'mode' = mode, name)\n"
    ]
   },
   {
