Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1031,15 +1031,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "keyword can't be an expression (<ipython-input-6-83b4e53c57ee>, line 7)",
+     "evalue": "invalid syntax (<ipython-input-5-681f88a848a1>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-83b4e53c57ee>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    return dict('x'= x_values, 'y'= y_values, 'mode' = mode, 'name'=name)\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m keyword can't be an expression\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-681f88a848a1>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    for point in data\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -1047,7 +1047,7 @@
     "def build_trace(data, mode = 'markers', name = 'data'):\n",
     "    x_values = []\n",
     "    y_values = []\n",
-    "    for point in data:\n",
+    "    for point in data\n",
     "        x_values.append(point['x'])\n",
     "        y_values.append(point['y'])\n",
     "    return dict('x'= x_values, 'y'= y_values, 'mode' = mode, 'name'=name)\n"
