Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1050,7 +1050,7 @@
     "    for point in data:\n",
     "        x_values.append(point['x'])\n",
     "        y_values.append(point['y'])\n",
-    "    return dict(x= x_values, y= y_values, mode = mode, name=name)\n"
+    "    return dict(x= x_values, 'y'= y_values, 'mode' = mode, 'name'=name)\n"
    ]
   },
   {
