Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3909,12 +3909,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-23-079864f53c12>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-23-079864f53c12>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    #return dict(x_range = x_range, y_range = y_range, options = options)\u001b[0m\n\u001b[0m                                                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "def layout(x_range = None, y_range = None, options = {}):\n",
-    "    return dict(x_range = x_range, y_range = y_range, options = options)"
+    "    #return dict(x_range = x_range, y_range = y_range, options = options)"
    ]
   },
   {
