Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3915,7 +3915,7 @@
    "source": [
     "def layout(x_range = None, y_range = None, options = {}):\n",
     "    trace = {}\n",
-    "    if x_range == False:\n",
+    "    if x_range = None:\n",
     "        trace.update(x_range = x_range)\n",
     "    if isinstance(y_range, NoneType) == False:\n",
     "        trace.update(y_range = y_range)\n",
