Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3909,7 +3909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3919,23 +3919,23 @@
     "        trace.update(x_range = x_range)\n",
     "    if y_range != None:\n",
     "        trace.update(y_range = y_range)\n",
-    "    if options != Non\n",
+    "    if options != {}:\n",
     "        trace.update(options = options)\n",
     "    return trace"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'options': {}}"
+       "{}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
