Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3909,25 +3909,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-44-a1fd855fe9d1>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-44-a1fd855fe9d1>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    trace.update(xaxis ={range = x_range)\u001b[0m\n\u001b[0m                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def layout(x_range = None, y_range = None, options = {}):\n",
     "    trace = {}\n",
     "    if x_range != None:\n",
-    "        trace.update(xaxis = dict(range = x_range)\n",
+    "        trace.update(xaxis = dict(range = x_range))\n",
     "    if y_range != None:\n",
-    "        trace.update(yaxis = {range = y_range)\n",
+    "        trace.update(yaxis = dict(range = y_range))\n",
     "    if options != {}:\n",
     "        trace.update(options = options)\n",
     "    return trace"
@@ -3935,7 +3926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -3944,7 +3935,7 @@
        "{}"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3977,16 +3968,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'xaxis': [1, 4]}"
+       "{'xaxis': {'range': [1, 4]}}"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4011,16 +4002,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'x_range': None, 'y_range': None, 'options': {}}"
+       "{}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
