Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -3909,7 +3909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3920,7 +3920,7 @@
     "    if y_range != None:\n",
     "        trace.update(yaxis = dict(range = y_range))\n",
     "    if options != {}:\n",
-    "        trace.update(options = options)\n",
+    "        trace.update(options)\n",
     "    return trace"
    ]
   },
